@@ -4,6 +4,9 @@
 	- added more meaning to autosave filenames (user, country etc.)
 	- added W-L-D and cup round robin rank info to the next opponent view
 	- added possibility to edit player names in the second player list
+	- corrected some  supercup definition errors which resulted in
+	crashes
+	- foul probabilities in the live game are more sophisticated now
 
 29/01/2009: v2.3.1
 	- added possibility for multiple tables in leagues (think
